--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,11 @@
     color:darkgray;
     background:cadetblue;
  }
+
+ header {
+    border-bottom: solid 2px rbg(42,122,228);
+    padding: 20px;
+    font-size: 32px;
+    color: rgb(42,122,228);
+    
+ }
