--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,15 @@
  body {
     color:darkgray;
     background:cadetblue;
+    padding-bottom: 80px;
+    padding-top: 80px;
+    
  }
 
  header {
-    border-bottom: solid 2px rbg(42,122,228);
+    border-bottom: solid 2px rgb(42,122,228);
     padding: 20px;
     font-size: 32px;
     color: rgb(42,122,228);
-    
+
  }
