--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
  body {
-    color:darkgray;
-    background:cadetblue;
-    padding-bottom: 80px;
-    padding-top: 80px;
+    color:white;
+    background:black;
+    margin: 0px;
     
  }
 
@@ -11,5 +10,19 @@
     padding: 20px;
     font-size: 32px;
     color: rgb(42,122,228);
+ 
+}
 
+ section {
+    background: rgb(184,156,213);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+  
+}
+
+ .chamada-texto {
+   margin-right: 5%;
+   
  }
