--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     color:white;
     background:black;
     margin: 0px;
-    
+    font-family: "Cormorant Garamond", serif;
  }
 
  header {
@@ -24,5 +24,13 @@
 
  .chamada-texto {
    margin-right: 5%;
-   
+
+ }
+
+ h1 {
+   font-size: 40px;
+ }
+
+ p {
+   font-size: 20px;
  }
