--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
  body {
-    color:white;
+    color:rgb(168, 27, 27);
     background:black;
     margin: 0px;
     font-family: "Cormorant Garamond", serif;
