--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
  }
 
  header {
-    border-bottom: solid 2px rgb(42,122,228);
+    border-bottom: solid 2px rgb(53, 0, 12);
     padding: 20px;
     font-size: 32px;
     color: rgb(42,122,228);
