--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,10 @@
  }
 
  header {
-    border-bottom: solid 2px rgb(53, 0, 12);
+    border-bottom: solid 2px rgb(224, 18, 66);
     padding: 20px;
     font-size: 32px;
-    color: rgb(42,122,228);
+    color: rgb(10, 91, 197);
 
 }
 
