--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     background:black;
     margin: 0px;
     font-family: "Cormorant Garamond", serif;
+    margin-bottom: 100px;
  }
 
  header {
@@ -13,7 +14,7 @@
 
 }
 
- section {
+ .chamada {
     background: rgb(184,156,213);
     padding-bottom: 80px;
     padding-top: 80px;
@@ -38,3 +39,35 @@
  img {
   height: 1000px;
  }
+
+ .categoria-videos {
+  display: flex;
+  overflow-x: auto;
+  gap: 10px;
+ }
+ 
+ section {
+  padding-left: 20px;
+  padding-right: 20px;
+ }
+
+ .categoria {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-top: 50px;
+ }
+
+ .categoria-videos img {
+  opacity: 0,5;
+  height: 200px;
+ }
+
+ .categoria-videos img:hover {
+  opacity: 1.0;
+  border: 1px, solid, green;
+ }
+
+ .categoria h2 {
+  color: rgb(42, 122, 228);
+}
+ 
